--- a/core/pom.xml
+++ b/core/pom.xml
@@ -102,6 +102,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>3.1.1</version>
         </dependency>
 
         <dependency>
@@ -244,6 +245,7 @@
             <plugin>
                 <groupId>org.codehaus.gmavenplus</groupId>
                 <artifactId>gmavenplus-plugin</artifactId>
+                <version>1.13.1</version>
                 <executions>
                     <execution>
                         <goals>
