added hibernate format_sql false

--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -5,6 +5,7 @@ spring:
       ddl-auto: validate
     properties:
       hibernate:
+        format_sql: false
 
   datasource:
     url: jdbc:postgresql://localhost:5432/tm_core
