Tm12 - added query dsl

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -16,15 +16,9 @@
         <java.version>11</java.version>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-
-        <!--        <apt-maven-plugin.version>1.1.3</apt-maven-plugin.version>-->
         <checkstyle.version>9.1</checkstyle.version>
         <checkstyle-maven-plugin.version>3.1.2</checkstyle-maven-plugin.version>
-        <!--        <cxf.version>2.2.3</cxf.version>-->
-        <!--        <cxf-rt-frontend-jaxws.verison>3.5.0</cxf-rt-frontend-jaxws.verison>-->
         <gmavenplus-plugin.version>1.13.1</gmavenplus-plugin.version>
-        <!--        <greenmail-spring.version>1.6.10</greenmail-spring.version>-->
-        <!--        <hibernate-types.version>2.19.2</hibernate-types.version>-->
         <liquibase.version>4.7.1</liquibase.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <mapstruct.version>1.4.2.Final</mapstruct.version>
@@ -51,6 +45,16 @@
     </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>com.querydsl</groupId>
+            <artifactId>querydsl-apt</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.querydsl</groupId>
+            <artifactId>querydsl-jpa</artifactId>
+        </dependency>
+
 
         <dependency>
             <groupId>io.vavr</groupId>
@@ -68,22 +72,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
         </dependency>
-
-        <!--        <dependency>-->
-        <!--            <groupId>org.springframework.boot</groupId>-->
-        <!--            <artifactId>spring-boot-starter-security</artifactId>-->
-        <!--        </dependency>-->
-
-        <!--        <dependency>-->
-        <!--            <groupId>org.springframework.boot</groupId>-->
-        <!--            <artifactId>spring-boot-starter-web</artifactId>-->
-        <!--        </dependency>-->
-
-        <!--                <dependency>-->
-        <!--                    <groupId>org.springframework</groupId>-->
-        <!--                    <artifactId>spring-beans</artifactId>-->
-        <!--                    <version>6.1.1</version>-->
-        <!--                </dependency>-->
 
         <dependency>
             <groupId>com.querydsl</groupId>
@@ -121,22 +109,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
-        <!--        <dependency>-->
-        <!--            <groupId>org.springframework.boot</groupId>-->
-        <!--            <artifactId>spring-boot-starter-amqp</artifactId>-->
-        <!--        </dependency>-->
-
-        <!--        <dependency>-->
-        <!--            <groupId>commons-validator</groupId>-->
-        <!--            <artifactId>commons-validator</artifactId>-->
-        <!--            <version>1.7</version>-->
-        <!--        </dependency>-->
-
-        <!--        <dependency>-->
-        <!--            <groupId>com.vladmihalcea</groupId>-->
-        <!--            <artifactId>hibernate-types-60</artifactId>-->
-        <!--            <version>2.21.1</version>-->
-        <!--        </dependency>-->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -320,30 +292,6 @@
                     </includes>
                 </configuration>
             </plugin>
-
-            <!--            <plugin>-->
-            <!--                <groupId>io.github.git-commit-id</groupId>-->
-            <!--                <artifactId>git-commit-id-maven-plugin</artifactId>-->
-            <!--                <version>5.0.0</version>-->
-            <!--                <executions>-->
-            <!--                    <execution>-->
-            <!--                        <id>get-the-git-infos</id>-->
-            <!--                        <goals>-->
-            <!--                            <goal>revision</goal>-->
-            <!--                        </goals>-->
-            <!--                        <phase>initialize</phase>-->
-            <!--                    </execution>-->
-            <!--                </executions>-->
-            <!--                <configuration>-->
-            <!--                    <generateGitPropertiesFile>true</generateGitPropertiesFile>-->
-            <!--                    <generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>-->
-            <!--                    <includeOnlyProperties>-->
-            <!--                        <includeOnlyProperty>^git.build.(time|version)$</includeOnlyProperty>-->
-            <!--                        <includeOnlyProperty>^git.commit.id.(abbrev|full)$</includeOnlyProperty>-->
-            <!--                    </includeOnlyProperties>-->
-            <!--                    <commitIdGenerationMode>full</commitIdGenerationMode>-->
-            <!--                </configuration>-->
-            <!--            </plugin>-->
         </plugins>
     </build>
 
