--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/tm_core
     username: postgres
-    password: postgres
+    password: admin
     driverClassName: org.postgresql.Driver
 
   liquibase:
@@ -37,6 +37,7 @@ management:
 server:
   servlet:
     context-path: /api/tm-core
+  port: 8989
 
 keycloak:
   enabled: true
