--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -5,12 +5,14 @@ spring:
       ddl-auto: validate
     properties:
       hibernate:
-        format_sql: false
+        format_sql: true # Ustawienie na true, aby formatować wygenerowane zapytania
+        show_sql: true
+        use_sql_comments: true
 
   datasource:
     url: jdbc:postgresql://localhost:5432/tm_core
     username: postgres
-    password: postgres
+    password: admin
     driverClassName: org.postgresql.Driver
 
   liquibase:
@@ -37,6 +39,7 @@ management:
 server:
   servlet:
     context-path: /api/tm-core
+  port: 8989
 
 keycloak:
   enabled: true
