Revert "Not working exwercise"
This reverts commit fc14ed23464451e677df9941b6127f7f65f840c4.

	deleted:    core/src/main/java/pl/edu/pja/trainmate/core/api/ExerciseController.java
	modified:   core/src/main/java/pl/edu/pja/trainmate/core/api/MenteeController.java
	deleted:    core/src/main/java/pl/edu/pja/trainmate/core/api/WorkoutController.java
	deleted:    core/src/main/java/pl/edu/pja/trainmate/core/domain/workoutplan/exercise/ExerciseFacade.java
	deleted:    core/src/main/java/pl/edu/pja/trainmate/core/domain/workoutplan/exercise/ExerciseRepository.java
	deleted:    core/src/main/java/pl/edu/pja/trainmate/core/domain/workoutplan/exercise/ExerciseService.java
	deleted:    core/src/main/java/pl/edu/pja/trainmate/core/domain/workoutplan/exercise/dto/ExerciseCreateDto.java
	deleted:    core/src/main/java/pl/edu/pja/trainmate/core/domain/workoutplan/exercise/mapper/ExerciseMapper.java
	modified:   core/src/main/resources/application.yml
	modified:   core/src/main/java/pl/edu/pja/trainmate/core/CoreApplication.java

--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -5,14 +5,12 @@ spring:
       ddl-auto: validate
     properties:
       hibernate:
-        format_sql: true # Ustawienie na true, aby formatować wygenerowane zapytania
-        show_sql: true
-        use_sql_comments: true
+        format_sql: false
 
   datasource:
     url: jdbc:postgresql://localhost:5432/tm_core
     username: postgres
-    password: admin
+    password: postgres
     driverClassName: org.postgresql.Driver
 
   liquibase:
@@ -39,7 +37,6 @@ management:
 server:
   servlet:
     context-path: /api/tm-core
-  port: 8989
 
 keycloak:
   enabled: true
