--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -39,11 +39,12 @@ server:
     context-path: /api/tm-core
 
 keycloak:
-  enabled: true
-  auth-server-url: http://localhost:8123/realms/trainmate
+  auth-server-url: http://localhost:8123
   realm: trainmate
-  bearer-only: true
   resource: train-mate
+  bearerOnly: true
+  enabled: true
   public-client: true
   cors: true
   use-resource-role-mappings: true
+  ssl-required: none
