--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -10,24 +10,17 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/tm_core
     username: postgres
-    password: admin
+    password: postgres
     driverClassName: org.postgresql.Driver
 
   liquibase:
     change-log: db/changelog-master.xml
-
-  security:
-    oauth2:
-      resourceserver:
-        jwt:
-          jwk-set-uri: http://localhost:8123/realms/trainmate/protocol/openid-connect/certs
 
 springdoc:
   api-docs:
     path: /api-docs
   override-with-generic-response: false
   show-actuator: true
-
 management:
   endpoints:
     web:
@@ -37,7 +30,6 @@ management:
 server:
   servlet:
     context-path: /api/tm-core
-  port: 8989
 
 keycloak:
   auth-server-url: http://localhost:8123
@@ -49,3 +41,8 @@ keycloak:
   cors: true
   use-resource-role-mappings: true
   ssl-required: none
+
+keycloak-admin:
+  server-url: http://localhost:8123
+  client-id: admin-cli
+  secret: cIxS7m4WPIsG6hd1UfCBqs4yi0Fkl0s4
