--- a/core/pom.xml
+++ b/core/pom.xml
@@ -19,7 +19,7 @@
         <checkstyle.version>9.1</checkstyle.version>
         <checkstyle-maven-plugin.version>3.1.2</checkstyle-maven-plugin.version>
         <gmavenplus-plugin.version>1.13.1</gmavenplus-plugin.version>
-        <liquibase.version>4.7.1</liquibase.version>
+        <liquibase.version>4.8.0</liquibase.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <mapstruct.version>1.4.2.Final</mapstruct.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
@@ -35,13 +35,22 @@
         <keycloak-admin-client.version>24.0.3</keycloak-admin-client.version>
         <resteasy-client.version>6.2.8.Final</resteasy-client.version>
         <resteasy-jackson2-provider.version>6.2.8.Final</resteasy-jackson2-provider.version>
+        <passay.version>1.6.4</passay.version>
+        <jakarta.ws.rs-api.version>3.1.0</jakarta.ws.rs-api.version>
+        <jakarta.annotation-api.version>3.0.0</jakarta.annotation-api.version>
+        <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
+        <jakarta.xml.bind-api.version>4.0.2</jakarta.xml.bind-api.version>
+        <jakarta.activation-api.version>2.1.3</jakarta.activation-api.version>
+        <jakarta.mail-api.version>2.1.3</jakarta.mail-api.version>
+        <spring-cloud-starter-openfeign.version>3.1.1</spring-cloud-starter-openfeign.version>
+        <springdoc-openapi-ui.version>1.6.4</springdoc-openapi-ui.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.passay</groupId>
             <artifactId>passay</artifactId>
-            <version>1.6.4</version>
+            <version>${passay.version}</version>
         </dependency>
 
         <dependency>
@@ -65,37 +74,37 @@
         <dependency>
             <groupId>jakarta.ws.rs</groupId>
             <artifactId>jakarta.ws.rs-api</artifactId>
-            <version>3.1.0</version>
+            <version>${jakarta.ws.rs-api.version}</version>
         </dependency>
 
         <dependency>
             <groupId>jakarta.annotation</groupId>
             <artifactId>jakarta.annotation-api</artifactId>
-            <version>3.0.0</version>
+            <version>${jakarta.annotation-api.version}</version>
         </dependency>
 
         <dependency>
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
-            <version>1.3.2</version>
+            <version>${javax.annotation-api.version}</version>
         </dependency>
 
         <dependency>
             <groupId>jakarta.xml.bind</groupId>
             <artifactId>jakarta.xml.bind-api</artifactId>
-            <version>4.0.2</version>
+            <version>${jakarta.xml.bind-api.version}</version>
         </dependency>
 
         <dependency>
             <groupId>jakarta.activation</groupId>
             <artifactId>jakarta.activation-api</artifactId>
-            <version>2.1.3</version>
+            <version>${jakarta.activation-api.version}</version>
         </dependency>
 
         <dependency>
             <groupId>jakarta.mail</groupId>
             <artifactId>jakarta.mail-api</artifactId>
-            <version>2.1.3</version>
+            <version>${jakarta.mail-api.version}</version>
         </dependency>
 
         <dependency>
@@ -166,7 +175,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
-            <version>3.1.1</version>
+            <version>${spring-cloud-starter-openfeign.version}</version>
         </dependency>
 
         <dependency>
@@ -178,7 +187,7 @@
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-ui</artifactId>
-            <version>1.6.4</version>
+            <version>${springdoc-openapi-ui.version}</version>
         </dependency>
 
         <!--Test's dependencies-->
