--- a/core/pom.xml
+++ b/core/pom.xml
@@ -43,6 +43,7 @@
         <jakarta.mail-api.version>2.1.3</jakarta.mail-api.version>
         <spring-cloud-starter-openfeign.version>3.1.1</spring-cloud-starter-openfeign.version>
         <springdoc-openapi-ui.version>1.6.4</springdoc-openapi-ui.version>
+        <simple-java-mail.version>6.6.0</simple-java-mail.version>
     </properties>
 
     <dependencyManagement>
@@ -58,6 +59,22 @@
     </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.simplejavamail</groupId>
+            <artifactId>simple-java-mail</artifactId>
+            <version>${simple-java-mail.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.passay</groupId>
             <artifactId>passay</artifactId>
