--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -6,12 +6,17 @@ spring:
     properties:
       hibernate:
         format_sql: false
-
   datasource:
     url: jdbc:postgresql://localhost:5432/tm_core
     username: postgres
-    password: admin
+    password: postgres
     driverClassName: org.postgresql.Driver
+
+  data:
+    mongodb:
+      host: localhost
+      port: 27017
+      database: tm_report
 
   liquibase:
     change-log: db/changelog-master.xml
@@ -30,10 +35,9 @@ management:
 server:
   servlet:
     context-path: /api/tm-core
-  port: 8989
 
 keycloak:
-  auth-server-url: http://0.0.0.0:8123
+  auth-server-url: http://localhost:8123
   realm: trainmate
   resource: train-mate
   bearerOnly: true
@@ -47,3 +51,6 @@ keycloak-admin:
   server-url: http://localhost:8123
   client-id: admin-cli
   secret: cIxS7m4WPIsG6hd1UfCBqs4yi0Fkl0s4
+logging:
+  level:
+    web: debug
