--- a/core/pom.xml
+++ b/core/pom.xml
@@ -19,13 +19,12 @@
         <checkstyle.version>9.1</checkstyle.version>
         <checkstyle-maven-plugin.version>3.1.2</checkstyle-maven-plugin.version>
         <gmavenplus-plugin.version>1.13.1</gmavenplus-plugin.version>
-        <liquibase.version>4.8.0</liquibase.version>
+        <liquibase.version>4.7.1</liquibase.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <mapstruct.version>1.4.2.Final</mapstruct.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
         <sonar.scaner.version>3.9.1.2184</sonar.scaner.version>
-        <sonar.tests>src/test/groovy</sonar.tests>
         <keycloak-security-adapter.version>24.0.1</keycloak-security-adapter.version>
         <vavr.version>0.10.4</vavr.version>
         <keycloak.version>16.1.0</keycloak.version>
@@ -44,6 +43,10 @@
         <spring-cloud-starter-openfeign.version>3.1.1</spring-cloud-starter-openfeign.version>
         <springdoc-openapi-ui.version>1.6.4</springdoc-openapi-ui.version>
         <simple-java-mail.version>6.6.0</simple-java-mail.version>
+
+        <spotbugs.version>4.5.0</spotbugs.version>
+        <spotbugs-annotations.version>4.7.2</spotbugs-annotations.version>
+        <spotbugs-maven-plugin.version>4.5.0.0</spotbugs-maven-plugin.version>
     </properties>
 
     <dependencyManagement>
@@ -68,11 +71,6 @@
             <groupId>org.simplejavamail</groupId>
             <artifactId>simple-java-mail</artifactId>
             <version>${simple-java-mail.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
 
         <dependency>
@@ -232,8 +230,20 @@
         </dependency>
 
         <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
 
