--- a/core/lombok.config
+++ b/core/lombok.config
@@ -1,5 +1,6 @@
 # Copy the Qualifier annotation from the instance variables to the constructor
 # see https://github.com/rzwitserloot/lombok/issues/745
 lombok.copyableAnnotations += org.springframework.beans.factory.annotation.Qualifier
+lombok.copyableAnnotations += org.springframework.beans.factory.annotation.Value
 lombok.addLombokGeneratedAnnotation = true
 config.stopBubbling = true
