--- a/core/pom.xml
+++ b/core/pom.xml
@@ -43,10 +43,10 @@
         <spring-cloud-starter-openfeign.version>3.1.1</spring-cloud-starter-openfeign.version>
         <springdoc-openapi-ui.version>1.6.4</springdoc-openapi-ui.version>
         <simple-java-mail.version>6.6.0</simple-java-mail.version>
-
         <spotbugs.version>4.5.0</spotbugs.version>
         <spotbugs-annotations.version>4.7.2</spotbugs-annotations.version>
         <spotbugs-maven-plugin.version>4.5.0.0</spotbugs-maven-plugin.version>
+        <jackson-datatype-jsr310.version>2.17.1</jackson-datatype-jsr310.version>
     </properties>
 
     <dependencyManagement>
@@ -62,6 +62,12 @@
     </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>${jackson-datatype-jsr310.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
@@ -221,12 +227,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>runtime</scope>
         </dependency>
 
         <dependency>
