--- a/core/pom.xml
+++ b/core/pom.xml
@@ -47,6 +47,9 @@
         <spotbugs-annotations.version>4.7.2</spotbugs-annotations.version>
         <spotbugs-maven-plugin.version>4.5.0.0</spotbugs-maven-plugin.version>
         <jackson-datatype-jsr310.version>2.17.1</jackson-datatype-jsr310.version>
+        <greenmail-spring.version>1.6.10</greenmail-spring.version>
+        <fastinfoset.version>2.1.1</fastinfoset.version>
+        <awaitility.version>4.1.0</awaitility.version>
     </properties>
 
     <dependencyManagement>
@@ -78,6 +81,13 @@
             <artifactId>simple-java-mail</artifactId>
             <version>${simple-java-mail.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.sun.xml.fastinfoset</groupId>
+            <artifactId>FastInfoset</artifactId>
+            <version>${fastinfoset.version}</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.passay</groupId>
@@ -223,6 +233,13 @@
         </dependency>
 
         <!--Test's dependencies-->
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <version>${awaitility.version}</version>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
