TrainMate-63 added file uploading for report

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -317,7 +317,7 @@
 
                 <configuration>
                     <violationSeverity>warning</violationSeverity>
-                    <configLocation>config/checkstyle.xml</configLocation>
+                    <configLocation>codestyleconfig/checkstyle.xml</configLocation>
                     <encoding>UTF-8</encoding>
                     <consoleOutput>true</consoleOutput>
                     <failsOnError>true</failsOnError>
